RESOLVED FIXED92756
Speech JavaScript API: Throw exception for start() when already started
https://bugs.webkit.org/show_bug.cgi?id=92756
Summary Speech JavaScript API: Throw exception for start() when already started
Hans Wennborg
Reported 2012-07-31 07:51:12 PDT
Speech JavaScript API: Throw exception for start() when already started
Attachments
Patch (12.54 KB, patch)
2012-07-31 08:01 PDT, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2012-07-31 08:01:54 PDT
Hans Wennborg
Comment 2 2012-07-31 08:02:23 PDT
WebKit Review Bot
Comment 3 2012-07-31 11:27:01 PDT
Comment on attachment 155540 [details] Patch Clearing flags on attachment: 155540 Committed r124225: <http://trac.webkit.org/changeset/124225>
WebKit Review Bot
Comment 4 2012-07-31 11:27:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.