Speech JavaScript API: Throw exception for start() when already started https://bugs.webkit.org/show_bug.cgi?id=92756

Reviewed by Adam Barth.

Source/WebCore:

Make the start() function throw an exception if the SpeechRecognition
object was already started.

Test: fast/speech/scripted/start-exception.html

* Modules/speech/SpeechRecognition.cpp:
(WebCore::SpeechRecognition::start):
(WebCore::SpeechRecognition::stopFunction):
(WebCore::SpeechRecognition::abort):
(WebCore::SpeechRecognition::didReceiveError):
(WebCore::SpeechRecognition::didEnd):
(WebCore::SpeechRecognition::SpeechRecognition):
* Modules/speech/SpeechRecognition.h:
(SpeechRecognition):
* Modules/speech/SpeechRecognition.idl:

Tools:

Fix the task queue in MockWebSpeechRecognizer.
It's important that we remove the task from the queue before we run
it, as running the task could alter the queue's state.

* DumpRenderTree/chromium/MockWebSpeechRecognizer.cpp:
(MockWebSpeechRecognizer::abort):
(MockWebSpeechRecognizer::setError):
(MockWebSpeechRecognizer::clearTaskQueue):
(MockWebSpeechRecognizer::StepTask::runIfValid):
* DumpRenderTree/chromium/MockWebSpeechRecognizer.h:
(MockWebSpeechRecognizer):

LayoutTests:

Layout test for checking that calling start on an already started
SpeechRecognition object throws an exception.

* fast/speech/scripted/start-exception-expected.txt: Added.
* fast/speech/scripted/start-exception.html: Added.


Canonical link: https://commits.webkit.org/110600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124225 268f45cc-cd09-0410-ab3c-d52691b4dbfc